Fix hamburguer position on mobile screen.

--- a/static/css/scss/_header.scss
+++ b/static/css/scss/_header.scss
@@ -52,6 +52,10 @@
 }
 
 @media (max-width: 768px) {
+    .header > .container {
+        display: flex;
+        justify-content: space-between;
+    }
     .header-menu {
         display: flex;
         flex-direction: column;
@@ -93,9 +97,6 @@
         gap: 8px;
         align-items: center;
         z-index: 9999;
-        position: relative;
-        top: 10px;
-        right: -300px;
         cursor: pointer;
     }
 
